# med_llm

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: run_etl.yaml
apps/med_llm_offline/: main.py  pyproject.toml  run_etl.py
apps/med_llm_offline/configs/: etl.yaml
apps/med_llm_offline/pipelines/: __init__.py  etl.py
apps/med_llm_offline/src/med_llm_offline/: config.py  utils.py
apps/med_llm_offline/src/med_llm_offline/application/crawlers/: __init__.py  crawl4ai.py
apps/med_llm_offline/src/med_llm_offline/domain/: document.py
apps/med_llm_offline/src/med_llm_offline/infrastructure/mongo/: __init__.py  service.py
apps/med_llm_offline/steps/: __init__.py
apps/med_llm_offline/steps/etl/: crawl.py
apps/med_llm_offline/steps/infrastructure/: __init__.py  ingest_to_mongodb.py  save_documents_to_disk.py
