[project]
name = "med-llm-offline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.13.2",
    "pyyaml>=6.0.2",
    "zenml==0.84.0",
]

[build-system]
requires = ["setuptools", "uv"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apps.med_llm_offline"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.include-package-data]
apps.med_llm_offline = true