[project]
name = "med-llm-offline"
version = "0.1.0"
description = "Offline ETL pipeline for medical documents"
readme = "README.md"
authors = [
    { name = "Bilal Burney", email = "bilalburney14@email.com" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.7.1",
    "loguru>=0.7.3",
    "playwright>=1.53.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.1",
    "pymongo>=4.13.2",
    "pyyaml>=6.0.2",
    "zenml==0.84.0",
    "certifi>=2024.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.scripts]
start = "python run_etl.py"
